--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 html {
   box-sizing: border-box;
 }
@@ -5,4 +6,53 @@ html {
 body {
   min-height: 100vh;
   margin: 0;
+  font-family: Bebas Neue, sans-serif;
+  background-color: whitesmoke;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 15px;
+  letter-spacing: 5px;
+  font-size: 40px;
+}
+
+/* loader */
+
+.loader {
+  /* keep the loader into middle even if we are scrolling */
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.loader img {
+  /* center loader */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.image-container {
+  margin: 10px 30%;
+}
+
+.image-container img {
+  width: 100%;
+  margin-top: 5px;
+}
+/* Media Query for large smartphone */
+@media screen and (max-width: 600px) {
+  .image-container {
+    margin: 10px;
+  }
+
+  h1 {
+    font-size: 20px;
+  }
 }
